examples/effects/m7b_12_row_var_uppercase.err.expected
error: unknown effect: E
  --> examples/effects/m7b_12_row_var_uppercase.kai:12:1
     |
  12 | fn bad(body: () -> Unit / E) : Unit / E = body()
     | ^
  = note: only declared `effect Foo { ... }` names and the catalog (Console, Fail, Stdin, Env, File, State, Reader, Writer, Mutable, Ffi) are valid in a row
  = help: declare `effect E { ... }` first, or fix the spelling
