examples/effects/m7b_12_row_var_uppercase.kai
# m7b #12 negative — capitalisation disambiguates effect labels
# from row variables. An identifier whose first character is
# uppercase is treated as a label, not a row variable. With no
# matching effect declaration the label fails resolution as
# "unknown effect: E" — the same diagnostic any unknown label
# would receive, not a row-variable-specific error.

effect Io {
  print(s: String) : Unit
}

fn bad(body: () -> Unit / E) : Unit / E = body()

fn main() : Int { 0 }
